// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostEditor has navigation options 1`] = `
Object {
  "headerBackTitle": null,
  "headerLeft": <HeaderBackButton
    buttonImage={
      Object {
        "testUri": "../../react-navigation/src/views/assets/back-icon.png",
      }
    }
    onPress={[Function]}
    pressColorAndroid="rgba(0, 0, 0, .32)"
    tintColor="#808c9b"
    truncatedTitle="Back"
  />,
  "headerRight": <HeaderButton
    disableOnClick={true}
    disabled={false}
    onPress={[MockFunction]}
    text="Save"
  />,
  "headerStyle": Object {
    "backgroundColor": "white",
    "paddingHorizontal": 10,
  },
  "headerTintColor": "#808c9b",
  "headerTitle": "a title",
  "headerTitleStyle": Object {
    "color": "black",
    "fontFamily": "Circular-Bold",
    "fontSize": 17,
  },
  "isSaving": false,
  "save": [MockFunction],
}
`;

exports[`PostEditor renders a new editor correctly 1`] = `
<Unknown
  behavior="padding"
  keyboardVerticalOffset={64}
>
  <ScrollView
    keyboardShouldPersistTaps="handled"
  >
    <View>
      <SectionLabel>
        Title
      </SectionLabel>
      <View>
        <TextInput
          allowFontScaling={true}
          editable={true}
          maxLength={100}
          onChangeText={[Function]}
          placeholder="What do you want to discuss?"
          placeholderTextColor="#c0c6cd"
          underlineColorAndroid="transparent"
          value=""
        />
      </View>
      <SectionLabel>
        Details
      </SectionLabel>
      <withNavigation(InlineEditor)
        autoGrow={false}
        communityId={undefined}
        containerStyle={
          Object {
            "borderBottomColor": "#c0c6cd",
            "borderBottomWidth": 0.5,
          }
        }
        editable={true}
        inputStyle={
          Object {
            "fontFamily": "Circular-Book",
          }
        }
        onChange={[Function]}
        onFocusToggle={[Function]}
        onInsertTopic={[Function]}
        placeholder="What else should we know?"
        submitting={undefined}
        value=""
      />
      <TouchableOpacity
        activeOpacity={0.2}
        onPress={[Function]}
      >
        <View>
          <SectionLabel>
            Topics
          </SectionLabel>
          <View>
            <Icon
              name="Plus"
            />
          </View>
        </View>
        <Topics
          onPress={[Function]}
          placeholder="Add topics."
          topics={Array []}
        />
      </TouchableOpacity>
    </View>
  </ScrollView>
  <Toolbar
    announcementEnabled={false}
    canModerate={undefined}
    filePickerPending={undefined}
    imagePickerPending={undefined}
    post={undefined}
    showFilePicker={[Function]}
    showImagePicker={[Function]}
    toggleAnnoucement={[Function]}
  />
</Unknown>
`;

exports[`PostEditor renders correctly while saving 1`] = `
<View
  enabled={true}
  keyboardVerticalOffset={64}
  onLayout={[Function]}
>
  <RCTScrollView
    keyboardShouldPersistTaps="handled"
  >
    <View>
      <View>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          Title
        </Text>
        <View>
          <TextInput
            allowFontScaling={true}
            editable={true}
            maxLength={100}
            onChangeText={[Function]}
            placeholder="What do you want to discuss?"
            placeholderTextColor="#c0c6cd"
            underlineColorAndroid="transparent"
            value=""
          />
        </View>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          Details
        </Text>
        <View>
          <View>
            <TextInput
              allowFontScaling={true}
              blurOnSubmit={false}
              editable={true}
              multiline={true}
              onBlur={[Function]}
              onChangeText={[Function]}
              onContentSizeChange={[Function]}
              onFocus={[Function]}
              onSelectionChange={[Function]}
              placeholder="What else should we know?"
              placeholderTextColor="#c0c6cd"
              selection={undefined}
              underlineColorAndroid="transparent"
              value=""
            />
          </View>
        </View>
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          collapsable={undefined}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
            >
              Topics
            </Text>
            <View>
              <Icon
                color={undefined}
                name="Plus"
              />
            </View>
          </View>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
          >
            Add topics.
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View>
    <View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Icon
          color={undefined}
          name="Paperclip"
        />
      </View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Icon
          color={undefined}
          name="AddImage"
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`PostEditor renders correctly while saving 2`] = `
<View
  enabled={true}
  keyboardVerticalOffset={64}
  onLayout={[Function]}
>
  <RCTScrollView
    keyboardShouldPersistTaps="handled"
  >
    <View>
      <View>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          Title
        </Text>
        <View>
          <TextInput
            allowFontScaling={true}
            editable={false}
            maxLength={100}
            onChangeText={[Function]}
            placeholder="What do you need help with?"
            placeholderTextColor="#c0c6cd"
            underlineColorAndroid="transparent"
            value=""
          />
        </View>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          Details
        </Text>
        <View>
          <View>
            <TextInput
              allowFontScaling={true}
              blurOnSubmit={false}
              editable={false}
              multiline={true}
              onBlur={[Function]}
              onChangeText={[Function]}
              onContentSizeChange={[Function]}
              onFocus={[Function]}
              onSelectionChange={[Function]}
              placeholder="What else should we know?"
              placeholderTextColor="#c0c6cd"
              selection={undefined}
              underlineColorAndroid="transparent"
              value=""
            />
          </View>
        </View>
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          collapsable={undefined}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
            >
              Topics
            </Text>
            <View>
              <Icon
                color={undefined}
                name="Plus"
              />
            </View>
          </View>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
          >
            Add topics.
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View>
    <View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Icon
          color={undefined}
          name="Paperclip"
        />
      </View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Icon
          color={undefined}
          name="AddImage"
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`PostEditor renders with a post 1`] = `
<Unknown
  behavior="padding"
  keyboardVerticalOffset={64}
>
  <ScrollView
    keyboardShouldPersistTaps="handled"
  >
    <View>
      <SectionLabel>
        Title
      </SectionLabel>
      <View>
        <TextInput
          allowFontScaling={true}
          editable={true}
          maxLength={100}
          onChangeText={[Function]}
          placeholder="What do you want to discuss?"
          placeholderTextColor="#c0c6cd"
          underlineColorAndroid="transparent"
          value=""
        />
      </View>
      <SectionLabel>
        Details
      </SectionLabel>
      <withNavigation(InlineEditor)
        autoGrow={false}
        communityId={undefined}
        containerStyle={
          Object {
            "borderBottomColor": "#c0c6cd",
            "borderBottomWidth": 0.5,
          }
        }
        editable={true}
        inputStyle={
          Object {
            "fontFamily": "Circular-Book",
          }
        }
        onChange={[Function]}
        onFocusToggle={[Function]}
        onInsertTopic={[Function]}
        placeholder="What else should we know?"
        submitting={undefined}
        value=""
      />
      <TouchableOpacity
        activeOpacity={0.2}
        onPress={[Function]}
      >
        <View>
          <SectionLabel>
            Topics
          </SectionLabel>
          <View>
            <Icon
              name="Plus"
            />
          </View>
        </View>
        <Topics
          onPress={[Function]}
          placeholder="Add topics."
          topics={Array []}
        />
      </TouchableOpacity>
      <View>
        <SectionLabel>
          Images
        </SectionLabel>
        <ImageSelector
          imageUrls={
            Array [
              "http://foo.com/foo.png",
              "http://baz.com/baz.png",
            ]
          }
          onAdd={[Function]}
          onRemove={[Function]}
          type="post"
        />
      </View>
    </View>
  </ScrollView>
  <Toolbar
    announcementEnabled={false}
    canModerate={undefined}
    filePickerPending={undefined}
    imagePickerPending={undefined}
    post={
      Object {
        "details": "myDetails",
      }
    }
    showFilePicker={[Function]}
    showImagePicker={[Function]}
    toggleAnnoucement={[Function]}
  />
</Unknown>
`;

exports[`SectionLabel renders correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
>
  Label
</Text>
`;

exports[`TypeButton renders correctly 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  onPress={[MockFunction]}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    DISCUSSION
  </Text>
</TouchableOpacity>
`;
